タイトルを「練習サイト」に変更しました。 #1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Yoshinao1963.GitHub.io by yoshinao1963</title>
+    <title>練習サイト</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Yoshinao1963.GitHub.io</h1>
+        <h1>練習サイト</h1>
         <p></p>
         <p class="view"><a href="https://github.com/yoshinao1963">View the Project on GitHub <small>yoshinao1963</small></a></p>
         <ul>
